--- a/INSTALL
+++ b/INSTALL
@@ -5,4 +5,4 @@ bristol, python3, python3-tk
 To install pyBristol just make the "install-sh"-script executable
 and run it as root.
 
-To unintall make the scrict "uninstall-sh" executable an run it.
+To unintall make the scrict "uninstall-sh" executable and run it.
